added the present

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -8,7 +8,7 @@
 <ion-content>
 
   <ion-card>
-  <img src="img/unicef-child.png"/>
+  <!--<img src="/android_asset/www/img/unicef-child.png"/>-->
 </ion-card>
 
 <div class="spacer" style="height: 10px;"></div>
