--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -8,7 +8,7 @@
 <ion-content class="card-background-page">
 
   <ion-card>
-    <img src="img/unicef-child2.png"/>
+    <!--<img src="/android_asset/www/img/unicef-child2.png"/>-->
     <div class="card-title"><span *ngIf="user"> {{user.name}} </span> </div>
     <br><br><br>
     <div class="card-subtitle"> <span *ngIf="user"> {{user.school_name}} </span> </div>
