--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -8,9 +8,10 @@
 <ion-content class="card-background-page">
 
   <ion-card>
-    <img src="img/unicef-child2.png"/>
-    <div class="card-title">Miss Kiwanuka</div>
-    <div class="card-subtitle">Kawangware Primary School</div>
+    <!--<img src="/android_asset/www/img/unicef-child2.png"/>-->
+    <div class="card-title"><span *ngIf="user"> {{user.name}} </span> </div>
+    <br><br><br>
+    <div class="card-subtitle"> <span *ngIf="user"> {{user.school_name}} </span> </div>
   </ion-card>
 
 
@@ -32,7 +33,6 @@
         Claim Reward
         <ion-icon name="pricetag" item-left></ion-icon>
       </ion-item>
-
   <ion-item-divider color="primary">Application</ion-item-divider>
 
     <ion-item>
@@ -51,7 +51,6 @@
         Logout
         <ion-icon name="power" item-left></ion-icon>
       </button>
-
 </ion-list>
 
 </ion-content>
