Reason For Absence

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -21,17 +21,17 @@
   <ion-list>
       <button ion-item (click)="gotopassword()">
         Edit Password
-        <ion-icon name="lock" item-left></ion-icon>
+        <ion-icon name="lock" item-left style="color: #d03e84"></ion-icon>
       </button>
 
       <ion-item>
         Notifications
-        <ion-icon name="notifications" item-left></ion-icon>
+        <ion-icon name="notifications" item-left style="color: #d03e84"></ion-icon>
       </ion-item>
 
       <ion-item>
         Claim Reward
-        <ion-icon name="pricetag" item-left></ion-icon>
+        <ion-icon name="pricetag" item-left style="color: #d03e84"></ion-icon>
       </ion-item>
   <ion-item-divider color="primary">Application</ion-item-divider>
 
@@ -43,7 +43,7 @@
 
       <ion-item>
         About and Help
-        <ion-icon name="help-circle" item-left></ion-icon>
+        <ion-icon name="help-circle" item-left style="color: #d03e84"></ion-icon>
       </ion-item>
 
 
