icons + splash screen

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
       <ion-navbar color="primary">
-            <ion-title>Take Attendance <small *ngIf="classes">(Class {{classes[index].class_name}})</small> </ion-title>
+            <ion-title>Mark Attendance <small *ngIf="classes">(Class {{classes[index].class_name}})</small> </ion-title>
             <ion-buttons end>
                   <button ion-button (click)="presentPopover($event)">
                   <ion-icon name="more"></ion-icon>
