V1 Pushing to master

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,7 +17,7 @@
             <div class="spacer" style="height: 10px;"></div>
             <button ion-button clear>
                   <ion-icon name='calendar' style="color: #d03e84"></ion-icon>
-                         <p style="color:#d03e84 ">&nbsp; &nbsp; 30th January 2017</p>
+                         <p style="color:#d03e84;">&nbsp; &nbsp; 30th January 2017</p>
             </button>
             <ion-item *ngFor="let stud of classes[index].students">
                   <ion-label><ion-badge item-right>1</ion-badge>{{stud.student_name}}
