Checkbox color false

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -24,7 +24,7 @@
                         <div class="spacer" style="height: 4px;"></div>
                         <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{stud.emis_code}}</p>
                   </ion-label>
-                  <ion-checkbox (ngModelChange)="onchange($event,stud.student_name)" item-right color="primary" [(ngModel)]="stud.status" ></ion-checkbox>
+                  <ion-checkbox (ngModelChange)="onchange($event,stud.student_name)" item-right [(ngModel)]="stud.status" ></ion-checkbox>
 </ion-item>
             <!--<ion-item>
              <ion-label>Daenerys Targaryen
