confirm password and confirm taking of attendance

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -103,7 +103,7 @@
 
       </ion-list>
 
-      <button [disabled]="load" ion-button block (click)="attendance()">{{  load==false ? 'Submit' : 'Submitting ...' }}</button>
+      <button [disabled]="load" ion-button block (click)="confirmattendance()">{{  load==false ? 'Submit' : 'Submitting ...' }}</button>
       <div class="spacer" style="height: 20px;"></div>
 
 </ion-content>
