--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -6,30 +6,30 @@
 
 
 <ion-content class="card-background-page">
-
-  <ion-card>
-    <!--<img src="/android_asset/www/img/unicef-child2.png"/>-->
+  <div class="spacer" style="height: 5px;"></div>
+  <!--<ion-card>
+    <img src="/android_asset/www/img/unicef-child2.png"/>
     <div class="card-title"><span *ngIf="user"> {{user.name}} </span> </div>
     <br><br><br>
     <div class="card-subtitle"> <span *ngIf="user"> {{user.school_name}} </span> </div>
-  </ion-card>
+  </ion-card>-->
     <ion-item-divider color="primary">Settings</ion-item-divider>
  
 
   <ion-list>
       <button ion-item (click)="gotopassword()">
         Edit Password
-        <ion-icon name="lock" item-left style="color: #d03e84"></ion-icon>
+        <ion-icon name="lock" item-left style="color: #3f51b5"></ion-icon>
       </button>
 
       <ion-item>
         Notifications
-        <ion-icon name="notifications" item-left style="color: #d03e84"></ion-icon>
+        <ion-icon name="notifications" item-left style="color: #3f51b5"></ion-icon>
       </ion-item>
 
       <ion-item>
         Claim Reward
-        <ion-icon name="pricetag" item-left style="color: #d03e84"></ion-icon>
+        <ion-icon name="pricetag" item-left style="color: #3f51b5"></ion-icon>
       </ion-item>
   <ion-item-divider color="primary">Application</ion-item-divider>
 
@@ -41,13 +41,13 @@
 
       <ion-item>
         About and Help
-        <ion-icon name="help-circle" item-left style="color: #d03e84"></ion-icon>
+        <ion-icon name="help-circle" item-left style="color: #3f51b5"></ion-icon>
       </ion-item>
 
 
      <button (click)="logout()" ion-item>
         Logout
-        <ion-icon name="power" item-left></ion-icon>
+        <ion-icon name="power" style="color: #3f51b5" item-left></ion-icon>
       </button>
 </ion-list>
 
