--- a/src/pages/headteacher/students/students.html
+++ b/src/pages/headteacher/students/students.html
@@ -25,7 +25,7 @@
 
                   </ion-label>
 
-                  <a ion-button small item-right>Edit</a>
+                  <a ion-button (click)="presentModal(stud,'update')" small item-right>Edit</a>
 
                   <a ion-button small item-right color="danger">Delete</a>
                   
@@ -35,7 +35,7 @@
       </ion-list>
 
       <ion-fab right bottom>
-        <button ion-fab mini color="dark"><ion-icon name="add"></ion-icon></button>
+        <button (click)="presentModal('a','add')" ion-fab mini color="dark"><ion-icon name="add"></ion-icon></button>
       </ion-fab>
       <div class="spacer" style="height: 20px;"></div>
 
