added the hd teachers page

--- a/src/pages/headteacher/teachers/teachers.html
+++ b/src/pages/headteacher/teachers/teachers.html
@@ -1,6 +1,6 @@
 <ion-header>
       <ion-navbar color="primary">
-            <ion-title>Students<small *ngIf="classes">( {{classes[index].class_name}})</small> </ion-title>
+            <ion-title>Teachers <small *ngIf="classes">( {{classes[index].class_name}})</small> </ion-title>
 
             <ion-buttons end>
                   <button ion-button (click)="presentPopover($event)">
