--- a/src/pages/headteacher/school/school.html
+++ b/src/pages/headteacher/school/school.html
@@ -12,7 +12,7 @@
       <div class="spacer" style="height: 5px;"></div>
 
        <ion-row wrap style="background-color:#3f51b5; height: 155px;">
-        <p style="color: white;text-align: center; font-weight: 700; font-size: 16px; padding-top: 15%;padding-left:40%;text-align: center;  white-space: normal;">Teachers</p>          
+        <p style="color: white;text-align: center; font-weight: 700; font-size: 16px; padding-top: 15%;padding-left:40%;text-align: center;  white-space: normal;"(click)="teachers()">Teachers</p>          
       </ion-row>
       <div class="spacer" style="height: 5px;"></div>
         
