--- a/src/pages/headteacher/students/students.html
+++ b/src/pages/headteacher/students/students.html
@@ -27,7 +27,7 @@
 
                   <a ion-button (click)="presentModal(stud,'update')" small item-right>Edit</a>
 
-                  <a ion-button small item-right color="danger">Delete</a>
+                  <a ion-button small item-right color="danger" (click)="showConfirm()">Delete</a>
                   
               
           </ion-item>
