--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -13,44 +13,46 @@
     <br><br><br>
     <div class="card-subtitle"> <span *ngIf="user"> {{user.school_name}} </span> </div>
   </ion-card>-->
-    <ion-item-divider color="primary">Settings</ion-item-divider>
- 
+  <ion-item-divider color="primary">Settings</ion-item-divider>
+
 
   <ion-list>
-      <button ion-item (click)="gotopassword()">
+    <button ion-item (click)="gotopassword()">
         Edit Password
         <ion-icon name="lock" item-left style="color: #3f51b5"></ion-icon>
       </button>
 
-      <ion-item>
-        Notifications
-        <ion-icon name="notifications" item-left style="color: #3f51b5"></ion-icon>
-      </ion-item>
-
-      <ion-item>
-        Claim Reward
-        <ion-icon name="pricetag" item-left style="color: #3f51b5"></ion-icon>
-      </ion-item>
-  <ion-item-divider color="primary">Application</ion-item-divider>
+    <ion-item>
+      Notifications
+      <ion-icon name="notifications" item-left style="color: #3f51b5"></ion-icon>
+    </ion-item>
 
     <ion-item>
-       <ion-label>Automate Updates</ion-label>
-       <ion-toggle checked="true"></ion-toggle>
+      Claim Reward
+      <ion-icon name="pricetag" item-left style="color: #3f51b5"></ion-icon>
+    </ion-item>
+    <ion-item-divider color="primary">Application</ion-item-divider>
+
+    <ion-item>
+      <ion-label>Automate Updates</ion-label>
+      <ion-toggle checked="true"></ion-toggle>
+    </ion-item>
+    <button (click)="gosync()" ion-item>
+        Update Attendance
+        <ion-icon name="sync" style="color: #3f51b5" item-left></ion-icon>
+      </button>
+
+    <ion-item>
+      About and Help
+      <ion-icon name="help-circle" item-left style="color: #3f51b5"></ion-icon>
     </ion-item>
 
 
-      <ion-item>
-        About and Help
-        <ion-icon name="help-circle" item-left style="color: #3f51b5"></ion-icon>
-      </ion-item>
 
-
-     <button (click)="logout()" ion-item>
+    <button (click)="logout()" ion-item>
         Logout
         <ion-icon name="power" style="color: #3f51b5" item-left></ion-icon>
       </button>
-</ion-list>
+  </ion-list>
 
 </ion-content>
-
-
