--- a/src/pages/sync/sync.html
+++ b/src/pages/sync/sync.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Sync Attendance</ion-title>
+    <ion-title>Update Attendance</ion-title>
   </ion-navbar>
 </ion-header>
 
@@ -22,29 +22,84 @@
       </ion-col>
     </ion-row>
   </ion-card>-->
-  <ion-card *ngIf="offlines">
+
+  <div class="spacer" style="height: 10px;"></div>
+  <ion-item>
+    <h3><b>Sync attendance data to Database</b></h3>
+  </ion-item>
+  <div class="spacer" style="height: 10px;"></div>
+
+  <ion-item> 
+    <h4>Internet Status</h4>
+    <ion-badge item-right>Connected</ion-badge>
+  </ion-item>
+  
+  <div class="spacer" style="height: 10px;"></div>
+
+  <ion-item> 
+    <h4><b>Last Sync On</b></h4>
+    <br>
+     <h5>Mon,13 March 2017, 13.30 PM</h5>
+  </ion-item>
+
+  <div class="spacer" style="height: 10px;"></div>
+
+  <ion-item *ngIf="offlines"> 
+     <h4>Items To Sync</h4>
+     <ion-badge item-right>{{offlines.length}} </ion-badge>   
+  </ion-item>
+
+<div class="spacer" style="height: 10px;"></div>
+   <ion-item *ngIf="offlines"> 
+     <h4>Items Failed To Sync</h4>
+     <ion-badge color = "secondary" item-right>{{offlines.length}} </ion-badge>   
+  </ion-item>
+  
+<div class="spacer" style="height: 10px;"></div>
+
+  <button *ngIf="offlines" ion-button full (click)="sync()" [disabled]="offlines.length==0" color="primary">
+   <ion-icon name='sync'> Update</ion-icon>
+  </button>
+
+    <!--<ion-card *ngIf="offlines">
     <ion-card-content *ngIf="offlines">
       <h1>{{offlines.length}} Items To Sync</h1>
     </ion-card-content>
-  </ion-card>
-  <button *ngIf="offlines" ion-button full clear (click)="sync()" [disabled]="offlines.length==0" color="primary" icon-left>
+  </ion-card>-->
+
+  <!--<button *ngIf="offlines" ion-button full clear (click)="sync()" [disabled]="offlines.length==0" color="primary" icon-left>
           <ion-icon name='sync'> Update</ion-icon>
-    </button>
+    </button>-->
+
+
   <!-- Card to display When syncing-->
   <ion-card *ngIf="load">
     <ion-card-content *ngIf="offlines">
       <h1>Syncing {{comp/offlines.length|percent:'1.0-0'}} </h1>
     </ion-card-content>
   </ion-card>
+
+<div class="spacer" style="height: 5px;"></div>
+
+  <button *ngIf="offlines" ion-button full [disabled]="offlines.length==0" color="primary">
+   <ion-icon name='checkmark'> Done Sync</ion-icon>
+  </button>
+  
   <!--Card to dislay WHen Syncing is finished-->
-  <div *ngIf="offlines">
+  <!--<div *ngIf="offlines">
     <ion-card *ngIf="!load && offlines.length==0">
       <ion-card-content>
         <h1>Done Sync</h1>
 
       </ion-card-content>
     </ion-card>
-  </div>
+  </div>-->
+
+   <ion-item> 
+    <ion-badge item-left><ion-icon name='arrow-forward'></ion-icon></ion-badge>
+    <a href = "" style="text-decoration: none"><h4>View Last Sync Details</h4></a>
+  </ion-item>
+
 </ion-content>
 
 
