--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,6 +1,6 @@
 <ion-header>
       <ion-navbar color="primary">
-            <ion-title>Mark Attendance <small *ngIf="classes">( {{classes[index].class_name}})</small> </ion-title>
+            <ion-title>Student Details<small *ngIf="classes">( {{classes[index].class_name}})</small> </ion-title>
 
             <ion-buttons end>
                   <button ion-button (click)="presentPopover($event)">
@@ -10,20 +10,16 @@
       </ion-navbar>
 </ion-header>
 
+
+
 <ion-content color="primary">
 
       <div class="spacer" style="height: 2px;"></div>
-      <ion-list *ngIf="classes">
+      <ion-list>
             <ion-item-divider color="primary">Student Details </ion-item-divider>
             <div class="spacer" style="height: 10px;"></div>
-            <button ion-button clear>
-                  <ion-icon name='calendar' style="color: #d03e84"></ion-icon>
 
-                         <!--<p style="color:#d03e84 ">&nbsp; &nbsp; 30th January 2017</p>-->
-                           <ion-datetime  style="color:#d03e84 " [min]="mindate" [max]="maxdate" displayFormat="  DD MMMM YYYY" (ionChange)="datechange(event)" pickerFormat="DD MMM  YYYY" [(ngModel)]="event"></ion-datetime>
-
-            </button>
-            <ion-item *ngFor="let stud of classes[index].students;let i=index">
+            <!--<ion-item *ngFor="let stud of classes[index].students;let i=index">
                   <ion-label>
                         <ion-badge item-right>{{i+1}}</ion-badge>{{stud.student_name}}
                         <div class="spacer" style="height: 4px;"></div>
@@ -33,77 +29,86 @@
                   </ion-label>
 
                   <ion-checkbox (ngModelChange)="onchange($event,stud.student_name)" item-right [(ngModel)]="stud.status" ></ion-checkbox>
-</ion-item>
+</ion-item>-->
+  <ion-item>
+         <ion-label>
+                        <ion-badge item-right>1</ion-badge>Daenerys Targaryen
+                        <div class="spacer" style="height: 4px;"></div>
 
-            <!--<ion-item>
-             <ion-label>Daenerys Targaryen
-             <div class="spacer" style="height: 4px;"></div>
-             <p style="font-size: 13px;">201439001</p></ion-label>
+                        <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;201439001</p>
 
-             <ion-checkbox item-right color="primary" checked="true"></ion-checkbox>
-       </ion-item>
+         </ion-label>
 
-        <ion-item>
-             <ion-label>Daenerys Targaryen
-             <div class="spacer" style="height: 4px;"></div>
-             <p style="font-size: 13px;">201439001</p></ion-label>
+          <ion-icon item-right name = "call"></ion-icon>
+  </ion-item>
 
-             <ion-checkbox item-right color="primary" checked="true"></ion-checkbox>
-       </ion-item>
+    <ion-item>
+         <ion-label>
+                        <ion-badge item-right>1</ion-badge>Daenerys Targaryen
+                        <div class="spacer" style="height: 4px;"></div>
 
-        <ion-item>
-             <ion-label>Daenerys Targaryen
-             <div class="spacer" style="height: 4px;"></div>
-             <p style="font-size: 13px;">201439001</p></ion-label>
+                        <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;201439001</p>
 
-             <ion-checkbox item-right color="primary" checked="true"></ion-checkbox>
-       </ion-item>
+         </ion-label>
 
-        <ion-item>
-             <ion-label>Daenerys Targaryen
-             <div class="spacer" style="height: 4px;"></div>
-             <p style="font-size: 13px;">201439001</p></ion-label>
+         <ion-icon item-right name = "call"></ion-icon>
+  </ion-item>
 
-             <ion-checkbox item-right color="primary" checked="true"></ion-checkbox>
-       </ion-item>
+    <ion-item>
+         <ion-label>
+                        <ion-badge item-right>1</ion-badge>Daenerys Targaryen
+                        <div class="spacer" style="height: 4px;"></div>
 
-        <ion-item>
-             <ion-label>Daenerys Targaryen
-             <div class="spacer" style="height: 4px;"></div>
-             <p style="font-size: 13px;">201439001</p></ion-label>
+                        <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;201439001</p>
 
-             <ion-checkbox item-right color="primary" checked="true"></ion-checkbox>
-       </ion-item>
+         </ion-label>
 
-        <ion-item>
-             <ion-label>Daenerys Targaryen
-             <div class="spacer" style="height: 4px;"></div>
-             <p style="font-size: 13px;">201439001</p></ion-label>
+          <ion-icon item-right name = "call"></ion-icon>
+  </ion-item>
 
-             <ion-checkbox item-right color="primary" checked="true"></ion-checkbox>
-       </ion-item>
+    <ion-item>
+         <ion-label>
+                        <ion-badge item-right>1</ion-badge>Daenerys Targaryen
+                        <div class="spacer" style="height: 4px;"></div>
 
-        <ion-item>
-             <ion-label>Daenerys Targaryen
-             <div class="spacer" style="height: 4px;"></div>
-             <p style="font-size: 13px;">201439001</p></ion-label>
+                        <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;201439001</p>
 
-             <ion-checkbox item-right color="primary" checked="true"></ion-checkbox>
-       </ion-item>
+         </ion-label>
 
-        <ion-item>
-             <ion-label>Daenerys Targaryen
-             <div class="spacer" style="height: 4px;"></div>
-             <p style="font-size: 13px;">201439001</p></ion-label>
-
-             <ion-checkbox item-right color="primary" checked="true"></ion-checkbox>
-       </ion-item>-->
-
-
+          <ion-icon item-right name = "call"></ion-icon>
+  </ion-item>
 
       </ion-list>
 
-      <button [disabled]="load" ion-button block (click)="confirmattendance()">{{  load==false ? 'Submit' : 'Submitting ...' }}</button>
-      <div class="spacer" style="height: 20px;"></div>
-
 </ion-content>
+
+
+
+<!--<ion-header>
+  <ion-navbar>
+    <ion-title>Student Details</ion-title>
+  </ion-navbar>
+</ion-header>
+
+<ion-content class="tutorial-page">
+
+  <ion-slides pager>
+    <ion-slide *ngFor="let slide of slides">
+      <ion-toolbar>
+        <ion-buttons end>
+          <button ion-button color="primary">Skip</button>
+        </ion-buttons>
+      </ion-toolbar>
+      <img [src]="slide.image" class="slide-image"/>
+      <h2 class="slide-title" [innerHTML]="slide.title"></h2>
+      <p [innerHTML]="slide.description"></p>
+    </ion-slide>
+    <ion-slide>
+      <ion-toolbar>
+      </ion-toolbar>
+      <img src="img/ica-slidebox-img-1.png" class="slide-image"/>
+      <h2 class="slide-title">Promote Student</h2>
+      <p>This page is currently inactive.Please check at the end of the term or contact your school admin in case of activation issues</p>
+    </ion-slide>
+  </ion-slides>
+</ion-content>-->
