--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,84 +1,85 @@
 <ion-header>
-      <ion-navbar color="primary">
-            <ion-title>Student Details<small *ngIf="classes">( {{classes[index].class_name}})</small> </ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Student Details<small *ngIf="classes">( {{classes[index].class_name}})</small> </ion-title>
 
-            <ion-buttons end>
-                  <button ion-button (click)="presentPopover($event)">
+    <ion-buttons end>
+      <button ion-button (click)="presentPopover($event)">
                   <ion-icon name="more"></ion-icon>
                   </button>
-            </ion-buttons>
-      </ion-navbar>
+    </ion-buttons>
+  </ion-navbar>
 </ion-header>
 
 
 
 <ion-content color="primary">
 
-      <div class="spacer" style="height: 2px;"></div>
-      <ion-list>
-            <ion-item-divider color="primary">Student Details </ion-item-divider>
-            <div class="spacer" style="height: 10px;"></div>
+  <div class="spacer" style="height: 2px;"></div>
+  <ion-list *ngIf="classes">
+    <ion-item-divider color="primary">
+      <ion-input color="primary" [(ngModel)]="studname" type="text" placeholder="Enter Student Name"></ion-input>
+      <ion-icon name="search" item-left></ion-icon>
+    </ion-item-divider>
+    <div class="spacer" style="height: 10px;"></div>
+    <ion-item-sliding #item *ngFor="let stud of classes[index].students|student:studname;let i=index">
+      <ion-item>
+        <ion-label>
+          <ion-badge item-right>{{i+1}}</ion-badge>{{stud.student_name}}
+          <div class="spacer" style="height: 4px;"></div>
 
-            <!--<ion-item *ngFor="let stud of classes[index].students;let i=index">
-                  <ion-label>
-                        <ion-badge item-right>{{i+1}}</ion-badge>{{stud.student_name}}
-                        <div class="spacer" style="height: 4px;"></div>
+          <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{stud.emis_code}}</p>
 
-                        <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{stud.emis_code}}</p>
+        </ion-label>
 
-                  </ion-label>
+        <ion-icon (click)="callConfirm(stud)" item-right name="call"></ion-icon>
+      </ion-item>
+      <ion-item-options side="right">
+   
+              <p>{{stud.gender}} {{stud.student_name}}</p>
+               <button ion-button (click)="callConfirm(stud)"><ion-icon  item-right name="call"></ion-icon></button>
+              
 
-                  <ion-checkbox (ngModelChange)="onchange($event,stud.student_name)" item-right [(ngModel)]="stud.status" ></ion-checkbox>
-</ion-item>-->
-  <ion-item>
-         <ion-label>
-                        <ion-badge item-right>1</ion-badge>Daenerys Targaryen
-                        <div class="spacer" style="height: 4px;"></div>
+       
+      </ion-item-options>
+    </ion-item-sliding>
 
-                        <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;201439001</p>
+    <!--<ion-item>
+      <ion-label>
+        <ion-badge item-right>1</ion-badge>Daenerys Targaryen
+        <div class="spacer" style="height: 4px;"></div>
 
-         </ion-label>
+        <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;201439001</p>
 
-          <ion-icon item-right name = "call"></ion-icon>
-  </ion-item>
+      </ion-label>
 
-    <ion-item>
-         <ion-label>
-                        <ion-badge item-right>1</ion-badge>Daenerys Targaryen
-                        <div class="spacer" style="height: 4px;"></div>
-
-                        <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;201439001</p>
-
-         </ion-label>
-
-         <ion-icon item-right name = "call"></ion-icon>
-  </ion-item>
-
-    <ion-item>
-         <ion-label>
-                        <ion-badge item-right>1</ion-badge>Daenerys Targaryen
-                        <div class="spacer" style="height: 4px;"></div>
-
-                        <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;201439001</p>
-
-         </ion-label>
-
-          <ion-icon item-right name = "call"></ion-icon>
-  </ion-item>
+      <ion-icon item-right name="call"></ion-icon>
+    </ion-item>
 
     <ion-item>
-         <ion-label>
-                        <ion-badge item-right>1</ion-badge>Daenerys Targaryen
-                        <div class="spacer" style="height: 4px;"></div>
+      <ion-label>
+        <ion-badge item-right>1</ion-badge>Daenerys Targaryen
+        <div class="spacer" style="height: 4px;"></div>
 
-                        <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;201439001</p>
+        <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;201439001</p>
 
-         </ion-label>
+      </ion-label>
 
-          <ion-icon item-right name = "call"></ion-icon>
-  </ion-item>
+      <ion-icon item-right name="call"></ion-icon>
+    </ion-item>
 
-      </ion-list>
+    <ion-item>
+      <ion-label>
+        <ion-badge item-right>1</ion-badge>Daenerys Targaryen
+        <div class="spacer" style="height: 4px;"></div>
+
+        <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;201439001</p>
+
+      </ion-label>
+
+      <ion-icon item-right name="call"></ion-icon>
+    </ion-item>-->
+
+  </ion-list>
 
 </ion-content>
 
