--- a/src/pages/headteacher/students/addstudent.html
+++ b/src/pages/headteacher/students/addstudent.html
@@ -37,6 +37,18 @@
     </ion-item>
 
   <div class="spacer" style="height:15px;"></div>
+   <ion-item>
+      <ion-label stacked>Guardian Name</ion-label>
+      <ion-input formControlName="guardian_name"></ion-input>
+    </ion-item>
+
+  <div class="spacer" style="height:15px;"></div>
+   <ion-item>
+      <ion-label stacked>Guardian Phone</ion-label>
+      <ion-input formControlName="guardian_phone"></ion-input>
+    </ion-item>
+
+  <div class="spacer" style="height:15px;"></div>
 
     <ion-item>
       <ion-label>Gender</ion-label>
