--- a/src/pages/headteacher/students/students.html
+++ b/src/pages/headteacher/students/students.html
@@ -21,12 +21,12 @@
             </ion-item-divider>
 
             <div class="spacer" style="height: 10px;"></div>
-            <ion-item *ngFor="let stud of classes[index].students|student:studname;let i=index">
+            <ion-item *ngFor="let stud of classes[index].students|orderBy:'gender':true|student:studname;let i=index">
                   <ion-label>
                         <ion-badge item-right>{{i+1}}</ion-badge>{{stud.student_name}}
                         <div class="spacer" style="height: 4px;"></div>
 
-                        <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{stud.emis_code}}</p>
+                        <p style="font-size: 13px;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; {{stud.class_id}}</p>
 
                   </ion-label>
 
